--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
         <servlet-name>ServletPompier</servlet-name>
         <url-pattern>/ServletPompier/ajouter</url-pattern>
     </servlet-mapping>
+        <servlet-mapping>
+        <servlet-name>ServletFonction</servlet-name>
+        <url-pattern>/ServletFonction/lister</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
