--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,8 @@
         <servlet-class>servlet.ServletFonction</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>ServletCaserne</servlet-name>
-        <servlet-class>servlet.ServletCaserne</servlet-class>
+        <servlet-name>ServletCasernes</servlet-name>
+        <servlet-class>servlet.ServletCasernes</servlet-class>
     </servlet>
     
     <servlet-mapping>
@@ -39,8 +39,8 @@
     </servlet-mapping>
     
     <servlet-mapping>
-        <servlet-name>ServletCaserne</servlet-name>
-        <url-pattern>/ServletCaserne/lister</url-pattern>
+        <servlet-name>ServletCasernes</servlet-name>
+        <url-pattern>/ServletCasernes/lister</url-pattern>
     </servlet-mapping>
     
     <session-config>
