--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         <servlet-class>servlet.ServletFonction</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>ServletCasernes</servlet-name>
+        <servlet-name>ServletCaserne</servlet-name>
         <servlet-class>servlet.ServletCasernes</servlet-class>
     </servlet>
     
@@ -39,7 +39,7 @@
     </servlet-mapping>
     
     <servlet-mapping>
-        <servlet-name>ServletCasernes</servlet-name>
+        <servlet-name>ServletCaserne</servlet-name>
         <url-pattern>/ServletCasernes/lister</url-pattern>
     </servlet-mapping>
     
