--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         <servlet-name>ServletFonction</servlet-name>
         <servlet-class>servlet.ServletFonction</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServletGrade</servlet-name>
+        <servlet-class>servlet.ServletGrade</servlet-class>
+    </servlet>
     
     <servlet-mapping>
         <servlet-name>ServletPompier</servlet-name>
@@ -32,6 +36,11 @@
     <servlet-mapping>
         <servlet-name>ServletFonction</servlet-name>
         <url-pattern>/ServletFonction/lister</url-pattern>
+    </servlet-mapping>
+    
+     <servlet-mapping>
+        <servlet-name>ServletGrade</servlet-name>
+        <url-pattern>/ServletGrade/lister</url-pattern>
     </servlet-mapping>
     
     <session-config>
