Modification du fichir web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 
     <servlet-mapping>
         <servlet-name>ServletCaserne</servlet-name>
-        <url-pattern>/ServletCasernes/lister</url-pattern>
+        <url-pattern>/ServletCaserne/lister</url-pattern>
     </servlet-mapping>
     
     <session-config>
