Ajout du servlet mapping pour consulter un grade

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,11 @@
         <servlet-name>ServletGrade</servlet-name>
         <url-pattern>/ServletGrade/lister</url-pattern>
     </servlet-mapping>
+    
+     <servlet-mapping>
+        <servlet-name>ServletGrade</servlet-name>
+        <url-pattern>/ServletGrade/consulter</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>ServletCaserne</servlet-name>
