Création de la ajout de l'url Surgrade

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,11 @@
         <servlet-class>servlet.ServletVehicule</servlet-class>
     </servlet>
     
+    <servlet>
+        <servlet-name>ServletSurgrade</servlet-name>
+        <servlet-class>servlet.ServletSurgrade</servlet-class>
+    </servlet>
+    
     <servlet-mapping>
         <servlet-name>ServletPompier</servlet-name>
         <url-pattern>/ServletPompier/lister</url-pattern>
@@ -77,6 +82,11 @@
      <servlet-mapping>
         <servlet-name>ServletVehicule</servlet-name>
         <url-pattern>/ServletVehicule/lister</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>ServletSurgrade</servlet-name>
+        <url-pattern>/ServletSurgrade/lister</url-pattern>
     </servlet-mapping>
     
     <session-config>
