Ajout du /ServletVehicule/consulter

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -85,6 +85,11 @@
     </servlet-mapping>
     
     <servlet-mapping>
+        <servlet-name>ServletVehicule</servlet-name>
+        <url-pattern>/ServletVehicule/consulter</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
         <servlet-name>ServletSurgrade</servlet-name>
         <url-pattern>/ServletSurgrade/lister</url-pattern>
     </servlet-mapping>
