Ajout servlet mapping pour consulter

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -129,9 +129,14 @@
         <url-pattern>/ServletSituation/consulter</url-pattern>
     </servlet-mapping>
     
-      <servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ServletTypeVehicule</servlet-name>
         <url-pattern>/ServletTypeVehicule/lister</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>ServletTypeVehicule</servlet-name>
+        <url-pattern>/ServletTypeVehicule/consulter</url-pattern>
     </servlet-mapping>
     
     <session-config>
