Ajout de servlet mapping pour ajouter une caserne

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -95,6 +95,11 @@
     </servlet-mapping>
     
      <servlet-mapping>
+        <servlet-name>ServletCaserne</servlet-name>
+        <url-pattern>/ServletCaserne/ajouter</url-pattern>
+    </servlet-mapping>
+    
+     <servlet-mapping>
         <servlet-name>ServletVehicule</servlet-name>
         <url-pattern>/ServletVehicule/lister</url-pattern>
     </servlet-mapping>
