Ajout servlet mapping grade/ajouter

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -84,6 +84,11 @@
         <url-pattern>/ServletGrade/lister</url-pattern>
     </servlet-mapping>
     
+    <servlet-mapping>
+        <servlet-name>ServletGrade</servlet-name>
+        <url-pattern>/ServletGrade/ajouter</url-pattern>
+    </servlet-mapping>
+    
      <servlet-mapping>
         <servlet-name>ServletGrade</servlet-name>
         <url-pattern>/ServletGrade/consulter</url-pattern>
